--- a/package.json
+++ b/package.json
@@ -13,13 +13,11 @@
     "@heroicons/react": "^2.0.18",
     "@material-tailwind/react": "^2.1.9",
     "@next/font": "^14.2.3",
-    "autoprefixer": "10.4.15",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.15",
     "framer-motion": "^10.16.1",
     "lucide-react": "^0.336.0",
     "next": "13.4.15",
-    "postcss": "8.4.27",
     "react": "18.2.0",
     "react-animated-numbers": "^0.16.0",
     "react-dom": "18.2.0",
@@ -27,7 +25,11 @@
     "react-icons": "^5.2.1",
     "react-type-animation": "^3.1.0",
     "resend": "^1.0.0",
-    "swiper": "^11.1.3",
-    "tailwindcss": "3.3.3"
+    "swiper": "^11.1.3"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3"
   }
 }
