--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-config-next": "13.4.15",
     "framer-motion": "^10.16.1",
     "lucide-react": "^0.336.0",
+    "moment-timezone": "^0.5.45",
     "next": "13.4.15",
     "react": "18.2.0",
     "react-animated-numbers": "^0.16.0",
